--- a/client/static/app.css
+++ b/client/static/app.css
@@ -1,1 +1,20 @@
-/* Put CSS rules here */
+body {
+	background-color: #FFFCF8; 	
+}
+
+.app {
+	padding-top: 100px;
+}
+
+.introBox {
+    height: 400px;
+    width: 50%;
+    text-align: center;
+    border: 1px solid black;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
